@@ -1,6 +1,14 @@
-
+2009-05-21 15:00 Ali aliov@xfce.org
+	*: Properly free the inhibitor data when the inhibitor
+	*: Don't accept events at all if they were not mapped.
+	*: Fix warning button action in the critical notification.
+	*: Show the "estimated time to be fully charged" when we have
+	relevent estimation.
+	*: Fix suspend/hibernate button configuration problem.
+	
 2009-05-21 10:30 Ali aliov@xfce.org 
 	 * : Russian translation updates
+	
 2009-05-20 10:30
 	* :Correct the makefile of the doc
 	* :Reduce suspend/hibernate timeout if the user disable screen saver lock
